# daiso-category-search

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.frontend  GIT_UPLOAD_GUIDE.md  INTEGRATION_SUMMARY.md  KMS_README.md  README.md  check_all_categories.py  check_db.py  check_db_category.py  check_db_v2.py  check_embedding_shape.py  check_poc_db.py  check_qdrant.py  cleanup_pages.py  daiso_search_guide.md  debug_run.py  debug_search.py  deploy.py  deploy_map.py  deploy_rerank.py  deploy_synonym.py  deploy_v38.py  deploy_v39.py  deploy_v40.py  deploy_v41.py  deploy_v42.py  deploy_v43.py  deploy_v44.py  deploy_v45.py  deploy_v46.py  docker-compose.dev.yml  docker-compose.yml  dockerfile  ecosystem.config.js  fix_api_key.py  (+43 more)
backend/: Dockerfile  __init__.py  api.py  api_legacy_backup.py  config.yaml  dev_server.py  main.py  pyproject.toml  ws_stt.py
backend/api/: api.py
backend/app/: config.py  main.py
backend/database/: __init__.py  category_matcher.py  database.py  embeddings.py  inspect_category_page.py  inspect_nuxt_state.py  inspect_page.py  inspect_product_detail.py  map_config.py  products.db
backend/logic/: __init__.py  agent_graph.py  ambiguity.py  integrated_search.py  nlu.py  prompts.py  reranker.py  schemas.py  search_manager.py
backend/ml/: __init__.py  rerank_service.py
backend/search/: __init__.py  benchmark.py  cli.py  config.py  embedding.py  hybrid.py  indexer.py  search_logger.py
backend/services/: pipeline_service.py  rerank_service.py  search_service.py  stt_service.py
backend/stt/: adapters.py  (+7 more)
(+449 files in other folders)
