[project]
name = "daiso-backend"
version = "0.1.0"
description = "Daiso Kiosk Backend - FastAPI"
authors = [
    {name = "pengveloper"}
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "elasticsearch>=7.17.0,<8.0.0",
    "qdrant-client>=1.9.0",
    "google-generativeai>=0.8.0",
    "httpx>=0.27.0",
    "torch (>=2.10.0,<3.0.0)",
    "transformers (>=5.1.0,<6.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["../tests/backend"]
asyncio_mode = "auto"
